# human-activity-recognition

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: data.yaml
configs/logging/: logging.yaml
configs/model/: model.yaml
configs/train/: train.yaml
human_activity_recognition/: dataset.py  model.py  preproccessing.py  train.py  utils.py
input/: .gitignore  train.csv.dvc  train_demographics.csv.dvc
outputs/2025-12-30/22-49-11/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-12-30/23-10-42/.hydra/: hydra.yaml
outputs/2025-12-30/23-13-04/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-30/23-13-36/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-30/23-20-38/.hydra/: hydra.yaml
outputs/2025-12-30/23-26-22/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-30/23-33-32/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-12-30/23-51-07/.hydra/: hydra.yaml
outputs/2025-12-30/23-58-32/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-12-31/00-09-02/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-31/00-12-44/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-12-31/00-18-09/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-12-31/00-29-07/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-12-31/00-41-23/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-31/01-09-03/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-12-31/01-21-45/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-12-31/01-35-59/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-12-31/01-58-16/.hydra/: config.yaml  hydra.yaml  overrides.yaml
