[project]
name = "human-activity-recognition"
version = "0.1.0"
description = "Human activity recognition system for human behavior detection using IMU and ToF sensor data"
readme = "README.md"
authors = [{name="Ivan Palagin", email="idpalagin@edu.hse.ru"}]
requires-python = ">=3.10"
dependencies = [
    "polars>=1.25.0,<2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "scipy>=1.11.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "torch>=2.0.0,<3.0.0",
    "lightning>=2.0.0,<3.0.0",
    "transformers>=4.35.0,<5.0.0",
    "hydra-core>=1.3.0,<2.0.0",
    "mlflow>=2.8.0,<3.0.0",
    "dvc>=3.0.0,<4.0.0",
    "dvc-s3>=3.2.0,<4.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "omegaconf>=2.3.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.0,<5.0.0",
    "ruff>=0.1.14,<0.2.0",
    "black>=24.0.0,<25.0.0",
    "mypy>=1.8.0,<2.0.0",
    "pytest>=7.4.0,<8.0.0",
]

[project.scripts]
human-activity-train = "human_activity_recognition.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "PL",
]
ignore = ["E501", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
